surefire hack for ide