@@ -38,35 +38,14 @@
 
   <build>
     <plugins>
-      <!--
-      <plugin>
-        <groupId>org.moditect</groupId>
-        <artifactId>moditect-maven-plugin</artifactId>
-        <version>1.0.0.Beta1</version>
-        <executions>
-          <execution>
-            <id>add-module-infos</id>
-            <phase>package</phase>
-            <goals>
-              <goal>add-module-info</goal>
-            </goals>
-            <configuration>
-              <module>
-                <moduleInfo>
-                  <name>toxyproxy.sample</name>
-                </moduleInfo>
-              </module>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      -->
-      
       <!-- for unit tests .. why? ;) -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.0</version>
+        <configuration>
+          <argLine>--add-modules jdk.incubator.httpclient</argLine>
+        </configuration>
       </plugin>
 
       <!-- for integration tests -->
